refactor(domain+jobs): migrate specifications to new pattern and update job aggregate